--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -310,7 +310,6 @@ jobs:
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
 
   update-open-api-spec:
-    # The conditional here is needed, to support when `test` is skipped
     if: ${{ ! failure() && ! cancelled() && inputs.upload-open-api }}
     name: Update OpenAPI Spec
     needs: [ init, test, build ]
@@ -650,7 +649,6 @@ jobs:
   push-manifest-list:
     name: Push Manifest
     needs: [ init, build, test ]
-    # The conditional here is needed, to support when `test` is skipped
     if: ${{ ! failure() && ! cancelled() }}
     runs-on: ubuntu-latest
     timeout-minutes: 10
@@ -735,7 +733,7 @@ jobs:
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
 
   deploy_by_push:
-    if: ${{ inputs.push-to-manifests }}
+    if: ${{ ! failure() && ! cancelled() && inputs.push-to-manifests }}
     name: Deploy (push)
     needs:
     - push-manifest-list
@@ -790,7 +788,7 @@ jobs:
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
 
   deploy_by_argocd:
-    if: ${{ ! inputs.push-to-manifests }}
+    if: ${{ ! failure() && ! cancelled() && ! inputs.push-to-manifests }}
     name: Deploy (ArgoCD)
     needs:
     - push-manifest-list
@@ -839,7 +837,7 @@ jobs:
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
 
   deploy_ocpp_gateway:
-    if: ${{ inputs.service-identifier == 'ocpp-gateway' }}
+    if: ${{ ! failure() && ! cancelled() && ( inputs.service-identifier == 'ocpp-gateway' || inputs.service-identifier == 'ocpp-v201-gateway' ) }}
     name: Deploy OCPP Gateway
     needs:
     - init
